# noctalia-color-scheme-manager

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  test.sh
docs/: 01-overview.md  02-refactor-plan.md
noctalia_color_scheme_manager/: __init__.py  main.py
noctalia_color_scheme_manager/data/: __init__.py  schema.py  system_theme_loader.py  theme_manager.py  theme_model.py
noctalia_color_scheme_manager/ui/: __init__.py  app.py  main_window.py  mockup_preview.py  theme_editor.py  variant_page.py
noctalia_color_scheme_manager/ui/deprecated/: mockup.py
noctalia_color_scheme_manager/ui/editors/: __init__.py  material_editor.py  terminal_editor.py
noctalia_color_scheme_manager/ui/widgets/: __init__.py  color_tile.py  preview.py
openspec/: config.yaml
openspec/changes/noctalia-modular-refactor/: 01-proposal.md  02-spec.md  03-design.md  04-tasks.md  05-apply-progress.md  sdd-preflight.md
openspec/specs/: material-preview-design.md  material-preview-reactive.md
openspec/specs/system-theme-loader/: 01-proposal.md  02-spec.md  03-design.md  04-tasks.md  05-apply.md  06-archive.md
openspec/tasks/: material-preview-reactive.md
openspec/verify/: material-preview-reactive.md
tests/: conftest.py
tests/test_data/: test_schema.py  test_theme_manager.py  test_theme_model.py
tests/test_editors/: __init__.py
tests/test_widgets/: __init__.py  test_color_utils.py
